src/objects/Teller_Cash_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cleared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cleared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Account</label>
        <referenceTo>Loan_Account__c</referenceTo>
        <relationshipLabel>Teller Cash Transactions</relationshipLabel>
        <relationshipName>Teller_Cash_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MF_Account_Tag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Tag</label>
        <referenceTo>MF_Account_Tag__c</referenceTo>
        <relationshipLabel>Teller Cash Transactions</relationshipLabel>
        <relationshipName>Teller_Cash_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Savings_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Savings Account</label>
        <referenceTo>Savings_Account__c</referenceTo>
        <relationshipLabel>Teller Cash Transactions</relationshipLabel>
        <relationshipName>Teller_Cash_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_For__c</fullName>
        <label>Transaction For</label>
        <picklist>
            <picklistValues>
                <fullName>GL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cash Received / Income</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Dispensed / Expense</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Teller Cash Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TCT-{00000000}</displayFormat>
        <label>Teller Cash Transaction Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teller Cash Transactions</pluralLabel>
    <recordTypes>
        <fullName>TCTGL</fullName>
        <active>true</active>
        <label>TCTGL</label>
    </recordTypes>
    <recordTypes>
        <fullName>TCTLoan</fullName>
        <active>true</active>
        <label>TCTLoan</label>
    </recordTypes>
    <recordTypes>
        <fullName>TCTSavings</fullName>
        <active>true</active>
        <label>TCTSavings</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cant_be_cleared_and_rejected</fullName>
        <active>true</active>
        <errorConditionFormula>(Cleared__c  = TRUE)  &amp;&amp;  (Rejected__c = TRUE)</errorConditionFormula>
        <errorMessage>An error has occurred while updating the transaction.</errorMessage>
    </validationRules>
</CustomObject>